--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -15,28 +15,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-22-da20ada7a040>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-da20ada7a040>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    numpy.loadtxt'NACA0012_x'\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "numpy.loadtxt'NACA0012_x'\n",
-    "numpy.loadtxt'NACA0012_y'\n",
-    "numpy.loadtxt'NACA0012_sigma'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {
     "collapsed": false
@@ -72,21 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-da20ada7a040>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-da20ada7a040>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    numpy.loadtxt'NACA0012_x'\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "x=numpy.loadtxt('../AeroPython/lessons/resources/NACA0012_x.txt')\n",
+    "y=numpy.loadtxt('../AeroPython/lessons/resources/NACA0012_y.txt')\n",
+    "sigma=numpy.loadtxt('../AeroPython/lessons/resources/NACA0012_sigma.txt')"
+   ]
   },
   {
    "cell_type": "code",
